tests/baselines/reference/tsxAttributeResolution7.errors.txt
tests/cases/conformance/jsx/file.tsx(9,8): error TS2322: Type '{ data-foo: 32; }' is not assignable to type '{ "data-foo"?: 文字; }'.
  Types of property '"data-foo"' are incompatible.
    Type '32' is not assignable to type '文字'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { "data-foo"?: string };
    	}
    }
    
    // Error
    <test1 data-foo={32} />;
           ~~~~~~~~~~~~~
!!! error TS2322: Type '{ data-foo: 32; }' is not assignable to type '{ "data-foo"?: 文字; }'.
!!! error TS2322:   Types of property '"data-foo"' are incompatible.
!!! error TS2322:     Type '32' is not assignable to type '文字'.
    
    // OK
    <test1 data-foo={'32'} />;
    <test1 data-bar={'32'} />;
    <test1 data-bar={32} />;
    